@@ -3830,6 +3830,7 @@ int util_write_configfile(void)
                                 
   if (tape_loading_simulate.v)                ADD_STRING_CONFIG,"--simulaterealload");
   if (tape_loading_simulate_fast.v)           ADD_STRING_CONFIG,"--simulaterealloadfast");
+  if (tzx_suppress_pause.v)                   ADD_STRING_CONFIG,"--deletetzxpauses");
 
   if (accelerate_loaders.v)                   ADD_STRING_CONFIG,"--realloadfast");
 		
